<resources>
    <string name="app_name">Tic Tac Toji</string>
    <string name="app_id">550668069597</string>
    <string name="btnPlay">Classic</string>
    <string name="btnMultiplayer">Multiplayer</string>
    <string name="btnSettings">Settings</string>
    <string name="btnQuit">Quit</string>
    <string name="btnBack">Back</string>
    <string name="btnCreate">Create</string>
    <string name="btnJoin">Invitations</string>
    <string name="btnPass">Pass</string>
    <string name="uiYouAre">You are:</string>
    <string name="uiYourTurn">Your Turn</string>
    <string name="uiTheirTurn">Their Turn</string>
    <string name="txtPrefXO">Do you prefer X or O?</string>
    <string name="title_activity_lobby">LobbyActivity</string>
    <string name="txtTotalGames">Total Games:</string>
    <string name="btnAbout">About</string>
    <string name="txtAppDescription">This app was made with Java.</string>
    <string name="txtURL">www.TomatoesGaming.com</string>
    <string name="btnSpectate">Spectate</string>
    <string name="txtPrefColor">What color do you prefer?</string>
    <string name="colorBlue">Blue</string>
    <string name="colorBrown">Brown</string>
    <string name="colorGreen">Green</string>
    <string name="colorOrange">Orange</string>
    <string name="colorPink">Pink</string>
    <string name="colorPurple">Purple</string>
    <string name="colorRed">Red</string>
    <string name="colorTeal">Teal</string>
    <string name="btnBattle">Battle mode</string>
    <string name="txtSelectedImage">Selected Image</string>
    <string name="btnQuickPlay">Quick Play</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
