<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        app:srcCompat="@drawable/x_red"
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnBack"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnBack"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioX"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroupX">

        <TextView
            android:text="@string/txtPrefXO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblPrefXO"
            android:textSize="22sp"
            android:layout_weight="1.89" />

        <RadioButton
            android:text="X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioX"
            android:layout_weight="1"
            android:textSize="22sp" />

        <RadioButton
            android:text="O"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioO"
            android:layout_weight="1"
            android:textSize="22sp" />

    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioRed"
        android:layout_below="@+id/radioGroupX"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/RadioGroupColor">

        <TextView
            android:text="@string/txtPrefColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblPrefColor"
            android:textSize="22sp" />

        <RadioButton
            android:text="@string/colorRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioRed"
            android:layout_weight="1"
            android:textSize="22sp" />

        <RadioButton
            android:text="@string/colorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioBlue"
            android:layout_weight="1"
            android:textSize="22sp" />

        <RadioButton
            android:text="@string/colorBrown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioBrown"
            android:layout_weight="1"
            android:textSize="22sp" />

        <RadioButton
            android:text="@string/colorGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGreen"
            android:layout_weight="1"
            android:textSize="22sp" />

        <RadioButton
            android:text="@string/colorOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioOrange"
            android:layout_weight="1"
            android:textSize="22sp" />

        <RadioButton
            android:text="@string/colorPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioPink"
            android:layout_weight="1"
            android:textSize="22sp" />

        <RadioButton
            android:text="@string/colorPurple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioPurple"
            android:layout_weight="1"
            android:textSize="22sp" />

        <RadioButton
            android:text="@string/colorTeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioTeal"
            android:layout_weight="1"
            android:textSize="22sp" />


    </RadioGroup>
</RelativeLayout>