<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tomatogaming.ttt.MainMenu"
    android:orientation="vertical">

    <Button
        android:text="@string/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnPlay"
        android:textSize="22sp"
        android:textAlignment="center"
        android:padding="20dp"
        android:layout_margin="10dp" />

    <Button
        android:text="@string/btnBattle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnBattle"
        android:textSize="22sp"
        android:textAlignment="center"
        android:padding="20dp"
        android:layout_margin="10dp"/>

    <Button
        android:text="@string/btnMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMultiplayer"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textAlignment="center"
        android:padding="20dp"
        android:layout_margin="10dp" />

    <Button
        android:text="@string/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btnSettings"
        android:textSize="22sp"
        android:textAlignment="center"
        android:padding="20dp"
        android:layout_margin="10dp" />
</LinearLayout>
