<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lobby"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tomatogaming.ttt.LobbyActivity">

    <TextView
        android:text="@string/txtTotalGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtGames" />

    <Button
        android:text="@string/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnBack" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGames"
        android:layout_toLeftOf="@+id/btnJoin"
        android:layout_toStartOf="@+id/btnJoin"
        android:id="@+id/listMatches">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:text="@string/btnJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnJoin"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnNew"
        android:layout_toEndOf="@+id/btnNew" />

    <Button
        android:text="@string/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNew"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnBack"
        android:layout_toEndOf="@+id/btnBack" />

    <Button
        android:text="@string/btnSpectate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnJoin"
        android:layout_toEndOf="@+id/btnJoin"
        android:id="@+id/btnSpectate" />
</RelativeLayout>
