<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_battle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:text="@string/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnQuit"
        android:textSize="22sp" />

    <Button
        android:text="@string/btnPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnQuit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnPass"
        android:textSize="22sp" />

    <TextView
        android:text="@string/uiYourTurn"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtTurn"
        android:textSize="22sp" />

    <ImageButton
        android:id="@+id/tacGrid4"
        android:elevation="0dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:background="@android:drawable/gallery_thumb" />


    <ImageButton
        android:id="@+id/tacGrid8"
        android:layout_below="@+id/tacGrid4"
        android:layout_toRightOf="@+id/tacGrid4"
        android:layout_toEndOf="@+id/tacGrid4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:background="@android:drawable/gallery_thumb" />

    <ImageButton
        android:id="@+id/tacGrid2"
        android:layout_above="@+id/tacGrid4"
        android:layout_toRightOf="@+id/tacGrid4"
        android:layout_toEndOf="@+id/tacGrid4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:background="@android:drawable/gallery_thumb" />

    <ImageButton
        android:id="@+id/tacGrid0"
        android:layout_above="@+id/tacGrid4"
        android:layout_toLeftOf="@+id/tacGrid4"
        android:layout_toStartOf="@+id/tacGrid4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:background="@android:drawable/gallery_thumb" />

    <ImageButton
        android:id="@+id/tacGrid6"
        android:layout_below="@+id/tacGrid4"
        android:layout_toLeftOf="@+id/tacGrid4"
        android:layout_toStartOf="@+id/tacGrid4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:background="@android:drawable/gallery_thumb" />

    <ImageButton
        android:id="@+id/tacGrid7"
        android:layout_below="@+id/tacGrid4"
        android:layout_toRightOf="@+id/tacGrid6"
        android:layout_toEndOf="@+id/tacGrid6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:background="@android:drawable/gallery_thumb" />

    <ImageButton
        android:id="@+id/tacGrid3"
        android:layout_below="@+id/tacGrid0"
        android:layout_alignLeft="@+id/tacGrid6"
        android:layout_alignStart="@+id/tacGrid6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:background="@android:drawable/gallery_thumb" />

    <ImageButton
        android:id="@+id/tacGrid5"
        android:layout_below="@+id/tacGrid2"
        android:layout_toRightOf="@+id/tacGrid4"
        android:layout_toEndOf="@+id/tacGrid4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:background="@android:drawable/gallery_thumb" />

    <ImageButton
        android:id="@+id/tacGrid1"
        android:layout_alignTop="@+id/tacGrid2"
        android:layout_toRightOf="@+id/tacGrid0"
        android:layout_toEndOf="@+id/tacGrid0"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:background="@android:drawable/gallery_thumb" />

    <ImageButton
        android:layout_width="75dp"
        app:srcCompat="@drawable/x_blue"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnZ"
        android:scaleType="centerCrop"
        android:layout_height="75dp" />

    <ImageButton
        android:layout_width="75dp"
        app:srcCompat="@drawable/x_brown"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnZ"
        android:layout_toStartOf="@+id/btnZ"
        android:id="@+id/btnY"
        android:scaleType="centerCrop"
        android:layout_height="75dp" />

    <ImageButton
        android:layout_width="75dp"
        app:srcCompat="@drawable/x_green"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnY"
        android:layout_toStartOf="@+id/btnY"
        android:id="@+id/btnX"
        android:scaleType="centerCrop"
        android:layout_height="75dp" />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/o_purple"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imgSelected"
        android:contentDescription="@string/txtSelectedImage" />

</RelativeLayout>
